# efj-mtgc

./: .containerignore  .env.example  .gitignore  CLAUDE.md  Containerfile  MASTER_DECKBUILD_PLAN.md  Makefile  README.md  TODO-ck-cart.md  TODO.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: enforce-permissions.sh  pre-commit-hook.sh
.github/ci/: entrypoint.sh  sandbox-run.sh
.github/workflows/: ci.yml  deploy.yml
architecture/: CARD_DATA_ACCESS.md
deploy/: README.md  backup.sh  deploy.sh  mac-deploy.sh  mac-setup.sh  mtgc-edhrec.service  mtgc-edhrec.timer  mtgc-nginx.conf  mtgc-prices.service  mtgc-prices.timer  mtgc-sealed-catalog.service  mtgc-sealed-catalog.timer  mtgc.container  mtgc.service  restore.sh  seed.sh  setup.sh  teardown.sh
deploy/thaen/: deploy.sh  setup.sh  teardown.sh
mtg_collector/: __init__.py  __main__.py  utils.py
mtg_collector/cli/: __init__.py  cache_cmd.py  crack_pack.py  crack_pack_server.py  data_cmd.py  db_cmd.py  debug_ingest.py  delete.py  demo_data.py  edit.py  export.py  import_cmd.py  (+14 more)
plans/: DB_PLAN.md  lineage.md  mtgjson-import.md  price-time-series.md  reduction.md
scripts/: agent_ingest.py  build_test_fixture.py  ocr_benchmark.py  session-context.sh  update-file-index.py
tests/: __init__.py  test_commander_queries.py  test_corner_identification.py  test_deck_builder.py  test_decks_binders.py  test_import.py  test_ingest_batch.py  test_ingest_ids.py  test_ingest_integration.py  test_mtgjson_import.py  test_ocr_identification.py  test_order_parser.py  test_order_resolver.py  test_price_import.py  test_reprocess_refinish.py  test_reversible_card.py  test_sealed_products.py  test_single_card_ingest.py
(+821 files in other folders)
