[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg-collector"
version = "2.0.0"
description = "CLI tool for managing Magic: The Gathering card collections"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ryan Gantt"}
]
keywords = ["mtg", "magic", "cards", "collection", "scryfall"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "anthropic>=0.18.0",
    "beautifulsoup4>=4.12.0",
    "easyocr>=1.7.0",
    "numpy<2",
    "torch<=2.2.2",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mtg = "mtg_collector.cli:main"

[project.urls]
Repository = "https://github.com/ryangantt/efj-mtgc"

[tool.setuptools.package-data]
mtg_collector = ["static/*.html"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mtg_collector*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
